// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataFilters clear 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px rgba(0,0,0,0.15);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c18 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c7 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c17 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c17:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus > circle,
.c17:focus > ellipse,
.c17:focus > line,
.c17:focus > path,
.c17:focus > polygon,
.c17:focus > polyline,
.c17:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus::-moz-focus-inner {
  border: 0;
}

.c17:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) > circle,
.c17:focus:not(:focus-visible) > ellipse,
.c17:focus:not(:focus-visible) > line,
.c17:focus:not(:focus-visible) > path,
.c17:focus:not(:focus-visible) > polygon,
.c17:focus:not(:focus-visible) > polyline,
.c17:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c19 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c19:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c19:focus > circle,
.c19:focus > ellipse,
.c19:focus > line,
.c19:focus > path,
.c19:focus > polygon,
.c19:focus > polyline,
.c19:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c19:focus::-moz-focus-inner {
  border: 0;
}

.c19:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c19:focus:not(:focus-visible) > circle,
.c19:focus:not(:focus-visible) > ellipse,
.c19:focus:not(:focus-visible) > line,
.c19:focus:not(:focus-visible) > path,
.c19:focus:not(:focus-visible) > polygon,
.c19:focus:not(:focus-visible) > polyline,
.c19:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c19:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c15 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c10:hover input:not([disabled]) + div,
.c10:hover input:not([disabled]) + span {
  border-color: #000000;
}

.c13 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c13:checked + span > span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c12 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c20 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c4 {
  margin: 0px;
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c16 {
    border: solid 2px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    height: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c18 {
    width: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c1"
      >
        <header
          class="c3"
        >
          <h2
            class="c4"
          >
            Filters
          </h2>
        </header>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-name"
          >
            name
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9 StyledCheckBoxGroup-sc-2nhc5d-0"
              id="data-name"
              role="group"
            >
              <label
                class="c10"
                label="a"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    checked=""
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  >
                    <svg
                      class="c15"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6,11.3 L10.3,16 L18,6.2"
                        fill="none"
                      />
                    </svg>
                  </div>
                </div>
                <span>
                  a
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="b"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c16 "
                  />
                </div>
                <span>
                  b
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <footer
          class="c3"
        >
          <button
            class="c17"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c18"
          />
          <button
            aria-hidden="true"
            class="c19 c20"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters drop 1`] = `
.c4 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c4 *[stroke*="#"],
.c4 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*="#"],
.c4 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus > circle,
.c3:focus > ellipse,
.c3:focus > line,
.c3:focus > path,
.c3:focus > polygon,
.c3:focus > polyline,
.c3:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) > circle,
.c3:focus:not(:focus-visible) > ellipse,
.c3:focus:not(:focus-visible) > line,
.c3:focus:not(:focus-visible) > path,
.c3:focus:not(:focus-visible) > polygon,
.c3:focus:not(:focus-visible) > polyline,
.c3:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test-data"
  >
    <div
      class="c2"
    >
      <button
        aria-label="Open filters"
        class="c3"
        id="test-data--filters-control"
        type="button"
      >
        <svg
          aria-label="Filter"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m3 6 7 7v8h4v-8l7-7V3H3z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`DataFilters drop 2`] = `
<button
  aria-label="Open filters"
  class="StyledButton-sc-323bzc-0 wfYUD"
  data-g-tabindex="none"
  id="test-data--filters-control"
  tabindex="-1"
  type="button"
>
  <svg
    aria-label="Filter"
    class="StyledIcon-sc-ofa7kd-0 jQvEgu"
    viewBox="0 0 24 24"
  >
    <path
      d="m3 6 7 7v8h4v-8l7-7V3H3z"
      fill="none"
      stroke="#000"
      stroke-width="2"
    />
  </svg>
</button>
`;

exports[`DataFilters drop 3`] = `
"@media only screen and (max-width: 768px) {
  .hftPdQ {
    margin-bottom: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .zPnFT {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}
@media only screen and (max-width: 768px) {
  .zPnFT {
    padding: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bGaxyQ {
    margin-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .dXyapD {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}
@media only screen and (max-width: 768px) {
  .drdMXk {
    height: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .iISQcM {
    width: 12px;
  }
}
@media only screen and (max-width: 768px) {
  .evXIdU {
    margin: 0px;
  }
}
@media only screen and (max-width: 768px) {
  .evXIdU {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}"
`;

exports[`DataFilters drop badge 1`] = `
.c4 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c4 *[stroke*="#"],
.c4 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*="#"],
.c4 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus > circle,
.c3:focus > ellipse,
.c3:focus > line,
.c3:focus > path,
.c3:focus > polygon,
.c3:focus > polyline,
.c3:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) > circle,
.c3:focus:not(:focus-visible) > ellipse,
.c3:focus:not(:focus-visible) > line,
.c3:focus:not(:focus-visible) > path,
.c3:focus:not(:focus-visible) > polygon,
.c3:focus:not(:focus-visible) > polyline,
.c3:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <div
      class="c2"
    >
      <button
        aria-label="Open filters"
        class="c3"
        id="data--filters-control"
        type="button"
      >
        <svg
          aria-label="Filter"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m3 6 7 7v8h4v-8l7-7V3H3z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`DataFilters layer 1`] = `
.c4 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c4 *[stroke*="#"],
.c4 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*="#"],
.c4 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus > circle,
.c3:focus > ellipse,
.c3:focus > line,
.c3:focus > path,
.c3:focus > polygon,
.c3:focus > polyline,
.c3:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) > circle,
.c3:focus:not(:focus-visible) > ellipse,
.c3:focus:not(:focus-visible) > line,
.c3:focus:not(:focus-visible) > path,
.c3:focus:not(:focus-visible) > polygon,
.c3:focus:not(:focus-visible) > polyline,
.c3:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test-data"
  >
    <div
      class="c2"
    >
      <button
        aria-label="Open filters"
        class="c3"
        id="test-data--filters-control"
        type="button"
      >
        <svg
          aria-label="Filter"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m3 6 7 7v8h4v-8l7-7V3H3z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`DataFilters layer 2`] = `
.c10 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c10 g {
  fill: inherit;
  stroke: inherit;
}

.c10 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c10 *[stroke*="#"],
.c10 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c10 *[fill-rule],
.c10 *[FILL-RULE],
.c10 *[fill*="#"],
.c10 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding: 24px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px rgba(0,0,0,0.15);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c8 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c11 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c13 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c9:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus > circle,
.c9:focus > ellipse,
.c9:focus > line,
.c9:focus > path,
.c9:focus > polygon,
.c9:focus > polyline,
.c9:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus::-moz-focus-inner {
  border: 0;
}

.c9:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible) > circle,
.c9:focus:not(:focus-visible) > ellipse,
.c9:focus:not(:focus-visible) > line,
.c9:focus:not(:focus-visible) > path,
.c9:focus:not(:focus-visible) > polygon,
.c9:focus:not(:focus-visible) > polyline,
.c9:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c21 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c21:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c21:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus > circle,
.c21:focus > ellipse,
.c21:focus > line,
.c21:focus > path,
.c21:focus > polygon,
.c21:focus > polyline,
.c21:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus::-moz-focus-inner {
  border: 0;
}

.c21:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) > circle,
.c21:focus:not(:focus-visible) > ellipse,
.c21:focus:not(:focus-visible) > line,
.c21:focus:not(:focus-visible) > path,
.c21:focus:not(:focus-visible) > polygon,
.c21:focus:not(:focus-visible) > polyline,
.c21:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c22 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c22:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c22:focus > circle,
.c22:focus > ellipse,
.c22:focus > line,
.c22:focus > path,
.c22:focus > polygon,
.c22:focus > polyline,
.c22:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c22:focus::-moz-focus-inner {
  border: 0;
}

.c22:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c22:focus:not(:focus-visible) > circle,
.c22:focus:not(:focus-visible) > ellipse,
.c22:focus:not(:focus-visible) > line,
.c22:focus:not(:focus-visible) > path,
.c22:focus:not(:focus-visible) > polygon,
.c22:focus:not(:focus-visible) > polyline,
.c22:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c22:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c16:hover input:not([disabled]) + div,
.c16:hover input:not([disabled]) + span {
  border-color: #000000;
}

.c19 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c19:checked + span > span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c18 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c23 {
  opacity: 0;
}

.c4 {
  max-width: 100%;
}

.c7 {
  margin: 0px;
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background-color: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
  will-change: transform;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 48px;
  background-color: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: absolute;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 0;
  top: 0px;
  bottom: 0px;
  right: 0px;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-animation: bKtuJK 0.2s ease-in-out forwards;
  animation: bKtuJK 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:768px) {
  .c5 {
    padding: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c17 {
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c20 {
    border: solid 2px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {
  .c8 {
    width: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    height: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

@media only screen and (max-width:768px) {
  .c0 {
    position: fixed;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="test-data--filters-layer"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    data-g-portal-id="0"
    id="test-data--filters-layer"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    <form
      class="c4"
    >
      <div
        class="c5"
      >
        <header
          class="c6"
        >
          <h2
            class="c7"
          >
            Filters
          </h2>
          <div
            class="c8"
          />
          <button
            class="c9"
            type="button"
          >
            <svg
              aria-label="FormClose"
              class="c10"
              viewBox="0 0 24 24"
            >
              <path
                d="m7 7 10 10M7 17 17 7"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </header>
        <div
          class="c11"
        />
        <div
          class="c12 "
        >
          <label
            class="c13"
            for="test-data-name"
          >
            name
          </label>
          <div
            class="c14 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c15 StyledCheckBoxGroup-sc-2nhc5d-0"
              id="test-data-name"
              role="group"
            >
              <label
                class="c16"
                label="a"
              >
                <div
                  class="c17 c18"
                >
                  <input
                    class="c19"
                    type="checkbox"
                  />
                  <div
                    class="c20 "
                  />
                </div>
                <span>
                  a
                </span>
              </label>
              <div
                class="c11"
              />
              <label
                class="c16"
                label="b"
              >
                <div
                  class="c17 c18"
                >
                  <input
                    class="c19"
                    type="checkbox"
                  />
                  <div
                    class="c20 "
                  />
                </div>
                <span>
                  b
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c11"
        />
        <footer
          class="c6"
        >
          <button
            class="c21"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c8"
          />
          <button
            aria-hidden="true"
            class="c22 c23"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters layer 3`] = `
"@media only screen and (max-width: 768px) {
  .hftPdQ {
    margin-bottom: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .zPnFT {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}
@media only screen and (max-width: 768px) {
  .zPnFT {
    padding: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bGaxyQ {
    margin-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .dXyapD {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}
@media only screen and (max-width: 768px) {
  .drdMXk {
    height: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .iISQcM {
    width: 12px;
  }
}
@media only screen and (max-width: 768px) {
  .evXIdU {
    margin: 0px;
  }
}
@media only screen and (max-width: 768px) {
  .evXIdU {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}"
`;

exports[`DataFilters properties array 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px rgba(0,0,0,0.15);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c16 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c7 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c15 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c15:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c15:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus > circle,
.c15:focus > ellipse,
.c15:focus > line,
.c15:focus > path,
.c15:focus > polygon,
.c15:focus > polyline,
.c15:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus::-moz-focus-inner {
  border: 0;
}

.c15:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) > circle,
.c15:focus:not(:focus-visible) > ellipse,
.c15:focus:not(:focus-visible) > line,
.c15:focus:not(:focus-visible) > path,
.c15:focus:not(:focus-visible) > polygon,
.c15:focus:not(:focus-visible) > polyline,
.c15:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c17 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus > circle,
.c17:focus > ellipse,
.c17:focus > line,
.c17:focus > path,
.c17:focus > polygon,
.c17:focus > polyline,
.c17:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus::-moz-focus-inner {
  border: 0;
}

.c17:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) > circle,
.c17:focus:not(:focus-visible) > ellipse,
.c17:focus:not(:focus-visible) > line,
.c17:focus:not(:focus-visible) > path,
.c17:focus:not(:focus-visible) > polygon,
.c17:focus:not(:focus-visible) > polyline,
.c17:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c10:hover input:not([disabled]) + div,
.c10:hover input:not([disabled]) + span {
  border-color: #000000;
}

.c13 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c13:checked + span > span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c12 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c18 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c4 {
  margin: 0px;
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    border: solid 2px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    height: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c16 {
    width: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c1"
      >
        <header
          class="c3"
        >
          <h2
            class="c4"
          >
            Filters
          </h2>
        </header>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-name"
          >
            name
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9 StyledCheckBoxGroup-sc-2nhc5d-0"
              id="data-name"
              role="group"
            >
              <label
                class="c10"
                label="a"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  a
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="b"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  b
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <footer
          class="c3"
        >
          <button
            class="c15"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c16"
          />
          <button
            aria-hidden="true"
            class="c17 c18"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters properties object 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px rgba(0,0,0,0.15);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c16 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c7 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c15 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c15:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c15:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus > circle,
.c15:focus > ellipse,
.c15:focus > line,
.c15:focus > path,
.c15:focus > polygon,
.c15:focus > polyline,
.c15:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus::-moz-focus-inner {
  border: 0;
}

.c15:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) > circle,
.c15:focus:not(:focus-visible) > ellipse,
.c15:focus:not(:focus-visible) > line,
.c15:focus:not(:focus-visible) > path,
.c15:focus:not(:focus-visible) > polygon,
.c15:focus:not(:focus-visible) > polyline,
.c15:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c17 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus > circle,
.c17:focus > ellipse,
.c17:focus > line,
.c17:focus > path,
.c17:focus > polygon,
.c17:focus > polyline,
.c17:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus::-moz-focus-inner {
  border: 0;
}

.c17:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) > circle,
.c17:focus:not(:focus-visible) > ellipse,
.c17:focus:not(:focus-visible) > line,
.c17:focus:not(:focus-visible) > path,
.c17:focus:not(:focus-visible) > polygon,
.c17:focus:not(:focus-visible) > polyline,
.c17:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c10:hover input:not([disabled]) + div,
.c10:hover input:not([disabled]) + span {
  border-color: #000000;
}

.c13 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c13:checked + span > span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c12 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c18 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c4 {
  margin: 0px;
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    border: solid 2px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    height: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c16 {
    width: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c1"
      >
        <header
          class="c3"
        >
          <h2
            class="c4"
          >
            Filters
          </h2>
        </header>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-name"
          >
            name
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9 StyledCheckBoxGroup-sc-2nhc5d-0"
              id="data-name"
              role="group"
            >
              <label
                class="c10"
                label="a"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  a
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="b"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  b
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <footer
          class="c3"
        >
          <button
            class="c15"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c16"
          />
          <button
            aria-hidden="true"
            class="c17 c18"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters renders 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px rgba(0,0,0,0.15);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c16 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c7 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c15 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c15:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c15:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus > circle,
.c15:focus > ellipse,
.c15:focus > line,
.c15:focus > path,
.c15:focus > polygon,
.c15:focus > polyline,
.c15:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus::-moz-focus-inner {
  border: 0;
}

.c15:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) > circle,
.c15:focus:not(:focus-visible) > ellipse,
.c15:focus:not(:focus-visible) > line,
.c15:focus:not(:focus-visible) > path,
.c15:focus:not(:focus-visible) > polygon,
.c15:focus:not(:focus-visible) > polyline,
.c15:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c17 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus > circle,
.c17:focus > ellipse,
.c17:focus > line,
.c17:focus > path,
.c17:focus > polygon,
.c17:focus > polyline,
.c17:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus::-moz-focus-inner {
  border: 0;
}

.c17:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) > circle,
.c17:focus:not(:focus-visible) > ellipse,
.c17:focus:not(:focus-visible) > line,
.c17:focus:not(:focus-visible) > path,
.c17:focus:not(:focus-visible) > polygon,
.c17:focus:not(:focus-visible) > polyline,
.c17:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c10:hover input:not([disabled]) + div,
.c10:hover input:not([disabled]) + span {
  border-color: #000000;
}

.c13 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c13:checked + span > span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c12 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c18 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c4 {
  margin: 0px;
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    border: solid 2px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    height: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c16 {
    width: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c1"
      >
        <header
          class="c3"
        >
          <h2
            class="c4"
          >
            Filters
          </h2>
        </header>
        <div
          class="c5"
        />
        <div
          class="c6 "
        >
          <label
            class="c7"
            for="data-name"
          >
            name
          </label>
          <div
            class="c8 FormField__FormFieldContentBox-sc-m9hood-1"
          >
            <div
              class="c9 StyledCheckBoxGroup-sc-2nhc5d-0"
              id="data-name"
              role="group"
            >
              <label
                class="c10"
                label="a"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  a
                </span>
              </label>
              <div
                class="c5"
              />
              <label
                class="c10"
                label="b"
              >
                <div
                  class="c11 c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 "
                  />
                </div>
                <span>
                  b
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c5"
        />
        <footer
          class="c3"
        >
          <button
            class="c15"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c16"
          />
          <button
            aria-hidden="true"
            class="c17 c18"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;
